Fix footer overlaping content
Step 1 of 2...

--- a/http/css/style.less
+++ b/http/css/style.less
@@ -5,6 +5,11 @@
     font-family: 'Trebuchet MS', Helvetica, sans-serif;
 }
 
+/* Footer fix by Lurux 7 jul 2019 */
+.pageContent {
+    padding-bottom: 80px;
+}
+
 .visprintimp {
   @media print {
     display: block !important;
